<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="256dp"
        android:background="@drawable/no_pic"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/choose_pic_tv"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/choose_pic_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/click_me_choose_pic"
        android:background="@drawable/text_button_bg"
        android:textColor="@color/white"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        android:layout_marginRight="8dp"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/dish_name"
        android:textColor="@color/black_54"
        android:textSize="@dimen/common_font_size"/>

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/name"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:textSize="@dimen/common_font_size"/>

    <TextView
        android:id="@+id/text_input_password_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/introduce"
        android:textColor="@color/black_54"
        android:textSize="@dimen/common_font_size"/>

    <EditText
        android:id="@+id/introduce_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/name"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/name_edit"
        android:textSize="@dimen/common_font_size"/>


    <TextView
        android:id="@+id/ensure_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/introduce_edit"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/purple_ripple"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="@dimen/large_font_size"
        android:text="@string/ensure"
        android:textColor="@color/white"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/ensure_btn"
        android:layout_marginTop="8dp"/>


</android.support.constraint.ConstraintLayout>