<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dish_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:textSize="@dimen/large_font_size"
        android:textColor="@color/black_75"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/number_edit"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/number_tv"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:text="3"
        android:inputType="number"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/re_create_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/number_edit"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/white"
        android:background="@drawable/text_button_bg"
        android:text="@string/re_create"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:elevation="3dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dish_recycler"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@+id/number_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/ensur_list_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/purple_ripple"
        android:textSize="@dimen/large_font_size"
        android:text="@string/ensure"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/dish_recycler"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:elevation="3dp"
        android:layout_marginTop="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/ensur_list_btn"
        android:layout_marginTop="16dp"/>
</android.support.constraint.ConstraintLayout>